--- a/app/views/spells.html
+++ b/app/views/spells.html
@@ -29,7 +29,7 @@
       <md-checkbox ng-model="ctrl.isDisabled">Disable the input?</md-checkbox>
       <p style="padding-left: 15px;">By default, <code>&lt;md-autocomplete&gt;</code> will cache results when performing a query.  After the initial call is performed, it will use the cached results to eliminate unnecessary server requests or lookup logic. This can be disabled above.</p>
 -->
-                <md-button ng-click="getSpellInfo(ctrl.searchText)" class="md-primary md-raised" flex flex-sm="100"><span>Add Spell</span></md-button>
+                <md-button ng-click="getSpellInfo(ctrl.searchText)" class="md-primary md-raised addSpell" flex flex-sm="100"><span>Add Spell</span></md-button>
             </form>
             <p><strong>Order By:</strong> <md-button ng-click="reverse=!reverse;order('name', reverse)" class="md-primary"><span>Name</span></md-button>
                 
